feat: harden launch-ready community and im flows