@@ -5,6 +5,11 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import java.awt.image.BufferedImage;
+import java.io.ByteArrayOutputStream;
+import javax.imageio.ImageIO;
+import java.nio.ByteBuffer;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import org.junit.jupiter.api.BeforeEach;
@@ -88,8 +93,9 @@ class MediaUploadTicketServiceTest {
 
     @Test
     void shouldStoreUploadedFileAndMarkTicketUploaded() throws Exception {
-        MediaUploadTicketResponse issued = service.issue(6L, "VIDEO_IDENTITY", "video/mp4", 16L, "face.mp4");
-        MockMultipartFile file = new MockMultipartFile("file", "face.mp4", "video/mp4", "real-video".getBytes());
+        byte[] videoBytes = minimalMp4WithDurationSeconds(10);
+        MediaUploadTicketResponse issued = service.issue(6L, "VIDEO_IDENTITY", "video/mp4", (long) videoBytes.length, "face.mp4");
+        MockMultipartFile file = new MockMultipartFile("file", "face.mp4", "video/mp4", videoBytes);
 
         MediaUploadTicketResponse uploaded = service.storeUploadedFile(6L, issued.ticketNo(), issued.uploadToken(), file);
 
@@ -97,15 +103,95 @@ class MediaUploadTicketServiceTest {
         assertEquals("UPLOADED", uploaded.status());
         assertEquals(issued.storageUrl(), uploaded.storageUrl());
         assertTrue(Files.exists(storedFile));
-        assertEquals("real-video", Files.readString(storedFile));
+        assertEquals(videoBytes.length, Files.readAllBytes(storedFile).length);
         assertEquals(issued.ticketNo(), service.requireUploadedStorageUrl(6L, "VIDEO_IDENTITY", issued.storageUrl()).ticketNo());
         assertThrows(IllegalArgumentException.class, () -> service.storeUploadedFile(6L, issued.ticketNo(), issued.uploadToken(), file));
     }
 
     @Test
+    void shouldStoreUploadedImageFileAndMarkTicketUploaded() throws Exception {
+        byte[] imageBytes = imageBytes("png");
+        MediaUploadTicketResponse issued = service.issue(6L, "COMMUNITY_IMAGE", "image/png", (long) imageBytes.length, "showcase.png");
+        MockMultipartFile file = new MockMultipartFile("file", "showcase.png", "image/png", imageBytes);
+
+        MediaUploadTicketResponse uploaded = service.storeUploadedFile(6L, issued.ticketNo(), issued.uploadToken(), file);
+
+        assertEquals("UPLOADED", uploaded.status());
+        assertTrue(Files.exists(storageRoot.resolve(issued.storageUrl().substring(1))));
+        assertEquals(issued.ticketNo(), service.requireUploadedStorageUrl(6L, "COMMUNITY_IMAGE", issued.storageUrl()).ticketNo());
+    }
+
+    @Test
+    void shouldRejectInvalidImageBytesBeforeMarkingTicketUploaded() throws Exception {
+        byte[] invalidBytes = "not-a-real-image".getBytes(StandardCharsets.UTF_8);
+        MediaUploadTicketResponse issued = service.issue(6L, "COMMUNITY_IMAGE", "image/png", (long) invalidBytes.length, "showcase.png");
+        MockMultipartFile file = new MockMultipartFile("file", "showcase.png", "image/png", invalidBytes);
+
+        assertEquals("image media invalid", assertThrows(IllegalArgumentException.class,
+                () -> service.storeUploadedFile(6L, issued.ticketNo(), issued.uploadToken(), file)).getMessage());
+
+        assertEquals("ISSUED", jdbcTemplate.queryForObject("select status from media_upload_ticket where ticket_no = ?", String.class, issued.ticketNo()));
+        assertTrue(!Files.exists(storageRoot.resolve(issued.storageUrl().substring(1))));
+    }
+
+    @Test
+    void shouldRejectInvalidVideoIdentityBytesBeforeMarkingTicketUploaded() throws Exception {
+        byte[] invalidBytes = "not-an-mp4".getBytes(StandardCharsets.UTF_8);
+        MediaUploadTicketResponse issued = service.issue(6L, "VIDEO_IDENTITY", "video/mp4", (long) invalidBytes.length, "face.mp4");
+        MockMultipartFile file = new MockMultipartFile("file", "face.mp4", "video/mp4", invalidBytes);
+
+        assertEquals("video identity media invalid", assertThrows(IllegalArgumentException.class,
+                () -> service.storeUploadedFile(6L, issued.ticketNo(), issued.uploadToken(), file)).getMessage());
+
+        assertEquals("ISSUED", jdbcTemplate.queryForObject("select status from media_upload_ticket where ticket_no = ?", String.class, issued.ticketNo()));
+        assertTrue(!Files.exists(storageRoot.resolve(issued.storageUrl().substring(1))));
+        assertThrows(IllegalArgumentException.class, () -> service.requireUploadedStorageUrl(6L, "VIDEO_IDENTITY", issued.storageUrl()));
+    }
+
+    @Test
+    void shouldRejectMetadataOnlyVideoIdentityBeforeMarkingTicketUploaded() throws Exception {
+        byte[] metadataOnly = mp4WithDurationButNoVideoTrack(10);
+        MediaUploadTicketResponse issued = service.issue(6L, "VIDEO_IDENTITY", "video/mp4", (long) metadataOnly.length, "metadata-only.mp4");
+        MockMultipartFile file = new MockMultipartFile("file", "metadata-only.mp4", "video/mp4", metadataOnly);
+
+        assertEquals("video identity media invalid", assertThrows(IllegalArgumentException.class,
+                () -> service.storeUploadedFile(6L, issued.ticketNo(), issued.uploadToken(), file)).getMessage());
+
+        assertEquals("ISSUED", jdbcTemplate.queryForObject("select status from media_upload_ticket where ticket_no = ?", String.class, issued.ticketNo()));
+        assertTrue(!Files.exists(storageRoot.resolve(issued.storageUrl().substring(1))));
+    }
+
+    @Test
+    void shouldRejectZeroDurationVideoIdentityBeforeMarkingTicketUploaded() throws Exception {
+        byte[] zeroDuration = minimalMp4WithDurationSeconds(0);
+        MediaUploadTicketResponse issued = service.issue(6L, "VIDEO_IDENTITY", "video/mp4", (long) zeroDuration.length, "zero.mp4");
+        MockMultipartFile file = new MockMultipartFile("file", "zero.mp4", "video/mp4", zeroDuration);
+
+        assertEquals("video identity media invalid", assertThrows(IllegalArgumentException.class,
+                () -> service.storeUploadedFile(6L, issued.ticketNo(), issued.uploadToken(), file)).getMessage());
+
+        assertEquals("ISSUED", jdbcTemplate.queryForObject("select status from media_upload_ticket where ticket_no = ?", String.class, issued.ticketNo()));
+        assertTrue(!Files.exists(storageRoot.resolve(issued.storageUrl().substring(1))));
+    }
+
+    @Test
+    void shouldRejectOverlongVideoIdentityBeforeMarkingTicketUploaded() throws Exception {
+        byte[] overlong = minimalMp4WithDurationSeconds(11);
+        MediaUploadTicketResponse issued = service.issue(6L, "VIDEO_IDENTITY", "video/mp4", (long) overlong.length, "long.mp4");
+        MockMultipartFile file = new MockMultipartFile("file", "long.mp4", "video/mp4", overlong);
+
+        assertEquals("video identity media invalid", assertThrows(IllegalArgumentException.class,
+                () -> service.storeUploadedFile(6L, issued.ticketNo(), issued.uploadToken(), file)).getMessage());
+
+        assertEquals("ISSUED", jdbcTemplate.queryForObject("select status from media_upload_ticket where ticket_no = ?", String.class, issued.ticketNo()));
+        assertTrue(!Files.exists(storageRoot.resolve(issued.storageUrl().substring(1))));
+    }
+
+    @Test
     void shouldStoreUploadedChatVoiceFileAndMarkTicketUploaded() throws Exception {
-        MediaUploadTicketResponse issued = service.issue(6L, "CHAT_VOICE", "audio/webm", 16L, "voice.webm");
-        MockMultipartFile file = new MockMultipartFile("file", "voice.webm", "audio/webm", "real-voice".getBytes());
+        byte[] voiceBytes = webmVoiceBytes();
+        MediaUploadTicketResponse issued = service.issue(6L, "CHAT_VOICE", "audio/webm", (long) voiceBytes.length, "voice.webm");
+        MockMultipartFile file = new MockMultipartFile("file", "voice.webm", "audio/webm", voiceBytes);
 
         MediaUploadTicketResponse uploaded = service.storeUploadedFile(6L, issued.ticketNo(), issued.uploadToken(), file);
 
@@ -114,8 +200,22 @@ class MediaUploadTicketServiceTest {
         assertTrue(uploaded.storageUrl().startsWith("/uploads/chat-voice/6/"));
         assertTrue(uploaded.storageUrl().endsWith(".webm"));
         assertTrue(Files.exists(storedFile));
-        assertEquals("real-voice", Files.readString(storedFile));
+        assertEquals(voiceBytes.length, Files.readAllBytes(storedFile).length);
         assertEquals(issued.ticketNo(), service.requireUploadedStorageUrl(6L, "CHAT_VOICE", issued.storageUrl()).ticketNo());
+    }
+
+    @Test
+    void shouldRejectInvalidChatVoiceBytesBeforeMarkingTicketUploaded() throws Exception {
+        byte[] invalidBytes = "not-a-real-voice".getBytes(StandardCharsets.UTF_8);
+        MediaUploadTicketResponse issued = service.issue(6L, "CHAT_VOICE", "audio/webm", (long) invalidBytes.length, "voice.webm");
+        MockMultipartFile file = new MockMultipartFile("file", "voice.webm", "audio/webm", invalidBytes);
+
+        assertEquals("voice media invalid", assertThrows(IllegalArgumentException.class,
+                () -> service.storeUploadedFile(6L, issued.ticketNo(), issued.uploadToken(), file)).getMessage());
+
+        assertEquals("ISSUED", jdbcTemplate.queryForObject("select status from media_upload_ticket where ticket_no = ?", String.class, issued.ticketNo()));
+        assertTrue(!Files.exists(storageRoot.resolve(issued.storageUrl().substring(1))));
+        assertThrows(IllegalArgumentException.class, () -> service.requireUploadedStorageUrl(6L, "CHAT_VOICE", issued.storageUrl()));
     }
 
     @Test
@@ -124,5 +224,95 @@ class MediaUploadTicketServiceTest {
         jdbcTemplate.update("update media_upload_ticket set expires_at = DATEADD('MINUTE', -1, CURRENT_TIMESTAMP) where ticket_no = ?", response.ticketNo());
 
         assertThrows(IllegalArgumentException.class, () -> service.requireIssuedStorageUrl(8L, "REPORT_EVIDENCE", response.storageUrl()));
+    }
+
+    @Test
+    void shouldAllowExpiredUploadedStorageUrlForBusinessSubmission() throws Exception {
+        byte[] videoBytes = minimalMp4WithDurationSeconds(10);
+        MediaUploadTicketResponse issued = service.issue(9L, "VIDEO_IDENTITY", "video/mp4", (long) videoBytes.length, "face.mp4");
+        MockMultipartFile file = new MockMultipartFile("file", "face.mp4", "video/mp4", videoBytes);
+        service.storeUploadedFile(9L, issued.ticketNo(), issued.uploadToken(), file);
+        jdbcTemplate.update("update media_upload_ticket set expires_at = DATEADD('MINUTE', -1, CURRENT_TIMESTAMP) where ticket_no = ?", issued.ticketNo());
+
+        assertEquals(issued.ticketNo(), service.requireUploadedStorageUrl(9L, "VIDEO_IDENTITY", issued.storageUrl()).ticketNo());
+        assertEquals(issued.ticketNo(), service.requireIssuedStorageUrl(9L, "VIDEO_IDENTITY", issued.storageUrl()).ticketNo());
+    }
+
+    private byte[] minimalMp4WithDurationSeconds(int durationSeconds) {
+        byte[] ftyp = mp4Box("ftyp", concat(
+                "isom".getBytes(StandardCharsets.US_ASCII),
+                ByteBuffer.allocate(4).putInt(0).array(),
+                "isom".getBytes(StandardCharsets.US_ASCII)
+        ));
+        ByteBuffer mvhdPayload = ByteBuffer.allocate(24);
+        mvhdPayload.putInt(0);
+        mvhdPayload.putInt(0);
+        mvhdPayload.putInt(0);
+        mvhdPayload.putInt(1000);
+        mvhdPayload.putInt(durationSeconds * 1000);
+        mvhdPayload.putInt(0);
+        byte[] mvhd = mp4Box("mvhd", mvhdPayload.array());
+        byte[] hdlr = mp4Box("hdlr", concat(
+                ByteBuffer.allocate(8).putInt(0).putInt(0).array(),
+                "vide".getBytes(StandardCharsets.US_ASCII),
+                new byte[12]
+        ));
+        byte[] mdia = mp4Box("mdia", hdlr);
+        byte[] trak = mp4Box("trak", mdia);
+        byte[] moov = mp4Box("moov", concat(mvhd, trak));
+        byte[] mdat = mp4Box("mdat", new byte[]{1});
+        return concat(ftyp, moov, mdat);
+    }
+
+    private byte[] mp4WithDurationButNoVideoTrack(int durationSeconds) {
+        byte[] ftyp = mp4Box("ftyp", concat(
+                "isom".getBytes(StandardCharsets.US_ASCII),
+                ByteBuffer.allocate(4).putInt(0).array(),
+                "isom".getBytes(StandardCharsets.US_ASCII)
+        ));
+        ByteBuffer mvhdPayload = ByteBuffer.allocate(24);
+        mvhdPayload.putInt(0);
+        mvhdPayload.putInt(0);
+        mvhdPayload.putInt(0);
+        mvhdPayload.putInt(1000);
+        mvhdPayload.putInt(durationSeconds * 1000);
+        mvhdPayload.putInt(0);
+        byte[] moov = mp4Box("moov", mp4Box("mvhd", mvhdPayload.array()));
+        byte[] mdat = mp4Box("mdat", new byte[]{1});
+        return concat(ftyp, moov, mdat);
+    }
+
+    private byte[] mp4Box(String type, byte[] content) {
+        ByteBuffer buffer = ByteBuffer.allocate(8 + content.length);
+        buffer.putInt(8 + content.length);
+        buffer.put(type.getBytes(StandardCharsets.US_ASCII));
+        buffer.put(content);
+        return buffer.array();
+    }
+
+    private byte[] concat(byte[]... arrays) {
+        int size = 0;
+        for (byte[] array : arrays) {
+            size += array.length;
+        }
+        ByteBuffer buffer = ByteBuffer.allocate(size);
+        for (byte[] array : arrays) {
+            buffer.put(array);
+        }
+        return buffer.array();
+    }
+
+    private byte[] imageBytes(String format) throws Exception {
+        BufferedImage image = new BufferedImage(1, 1, BufferedImage.TYPE_INT_RGB);
+        ByteArrayOutputStream output = new ByteArrayOutputStream();
+        ImageIO.write(image, format, output);
+        return output.toByteArray();
+    }
+
+    private byte[] webmVoiceBytes() {
+        return concat(
+                new byte[]{0x1A, 0x45, (byte) 0xDF, (byte) 0xA3},
+                "xiaoyuanquan-voice".getBytes(StandardCharsets.US_ASCII)
+        );
     }
 }
